# Unicorn-Amanuensis

./: .env.template  .gitattributes  .gitignore  AMD_NPU_SETUP.md  API_TIMING_SPECIFICATION.md  ARCHITECTURE.md  BATCH30_EXECUTIVE_SUMMARY.md  BATCH_NPU_INTEGRATION_COMPLETE.md  BATCH_PROCESSOR_INTEGRATION_REPORT.md  BUFFER_POOL_DESIGN.md  BUG6_FIX_CHECKLIST.md  BUG6_ROOT_CAUSE_ANALYSIS.md  CLAUDE.md  CPP_INTEGRATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile.comprehensive  Dockerfile.igpu  Dockerfile.igpu-final  Dockerfile.igpu-int8  Dockerfile.igpu-openvino  Dockerfile.lightweight  Dockerfile.production  Dockerfile.stt-igpu  Dockerfile.sycl-only  Dockerfile.uc1-production  EXPLORATION_INDEX.md  FINAL_STATUS_AND_PATH_FORWARD.md  FINAL_VERIFICATION_REPORT.txt  GUI_BEFORE_AFTER_20251101.txt  GUI_UPDATE_SUMMARY_20251101.txt  HARDWARE_ACCELERATION_GUIDE.md  IGPU_MASTER_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INSTALL-NPU.md  INTEGRATION_QUICK_START.md  INTEGRATION_SUMMARY.md  KERNEL_ANALYSIS_INDEX.md  KERNEL_ANALYSIS_REPORT.md  KERNEL_ANALYSIS_SUMMARY.md  KERNEL_QUICK_REFERENCE.md  (+179 more)
.github/workflows/: docker-build.yml
config/: production.yaml  runtime_config.yaml
deployment/: DEPLOYMENT_GUIDE.md  health_check.sh  unicorn-amanuensis.service
npu/: npu_accelerator.py  npu_runtime.py
npu-models/: INSTALL.md  README.md  download-models.sh
npu-models/whisper-base-npu-int8/: npu_config.json
npu-models/whisper-large-int8/: README.md  (+4 more)
runtime/: platform_detector.py
scripts/: install-amanuensis.sh
tests/: README.md  create_long_form_audio.py  generate_test_audio.py  integration_test_results.json  integration_test_week15.py  load_test_pipeline.py  monitor_npu_utilization.py  profiling_utils.py  test_accuracy.py  test_buffer_config.py  test_buffer_pool.py  test_component_timer.py  test_cpp_integration.py  test_npu_callback.py  test_performance.py  test_pipeline_integration.py  test_service_startup.py  test_stress.py  validate_accuracy.py  week16_validation_suite.py  week17_performance_measurement.py  week18_long_form_tests.py  week18_multi_stream_test.py  week18_performance_profiling.py  week19_5_performance_test.py  week19_5_pipeline_validation.py  week19_6_comprehensive_validation.py  week19_6_config_validation.py  week19_6_validation.py  week19_integration_tests.py
whisper-cpp-igpu/: INTEL_IGPU_BENCHMARKS.md  README-Intel-iGPU.md
whisperx/: .gitignore  ATTENTION_KERNEL_FIX_GUIDE.md  ATTENTION_KERNEL_FIX_REPORT_NOV3.md  BATCHED_MATMUL_EXECUTIVE_SUMMARY.md  BATCHED_MATMUL_FIX_GUIDE.md  BATCHED_MATMUL_OPTIMIZATION_REPORT.md  COMPLETE_SESSION_SUMMARY_NOV3.md  DECODER_FIX_LOG.md  DECODER_PHASE1_PLAN.md  DECODER_TOKEN_GENERATION_FIX_COMPLETE.md  DELIVERABLES.md  DELIVERABLES_SUMMARY.md  DIARIZATION_BUNDLED_NOV3.md  DIARIZATION_EXAMPLES.md  DIARIZATION_IMPLEMENTATION_COMPLETE.md  DIARIZATION_QUICK_START.md  DIARIZATION_SUMMARY.md  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.igpu  Dockerfile.igpu.fixed  Dockerfile.igpu.ultimate  Dockerfile.igpu.working  Dockerfile.npu  Dockerfile.openvino  Dockerfile.whisperx_openvino  FILES_CREATED_INDEX.md  FINAL_OVERNIGHT_STATUS.md  FINAL_STATUS_NOV3_MORNING.md  FIX_SUMMARY.md  GOOD_MORNING_REPORT.md  GUI-ACCESS.md  INTEGRATION_COMPLETE_NOV3.md  INVESTIGATION_COMPLETE_NOV3.md  KV_CACHE_FIX_VALIDATION_REPORT.md  KV_CACHE_IMPLEMENTATION_ANALYSIS.md  KV_CACHE_IMPLEMENTATION_COMPLETE.md  MASTER_CHECKLIST_NOV3.md  NPU-IMPLEMENTATION-COMPLETE.md  NPU_ATTENTION_INTEGRATION_REPORT.md  (+127 more)
xdna1/: IMPLEMENTATION_REPORT.md  README.md  requirements.txt  server.py
xdna2/: ACCURACY_TEST_SUMMARY.txt  ACCURACY_VALIDATION_REPORT.md  AMD_KERNEL_FINDINGS.md  API_EXAMPLES.md  BF16_COMPILATION_STATUS.md  BF16_INTEGRATION_COMPLETE.md  BF16_SIGNED_VALUE_BUG.md  BF16_WORKAROUND_DOCUMENTATION.md  BF16_WORKAROUND_README.md  BFP16_INTEGRATION_ROADMAP.md  BFP16_QUICK_START.md  CHESS_COMPILER_SUCCESS.md  COMPREHENSIVE_FINDINGS_SUMMARY.md  DIRECT_CPP_XRT_INTEGRATION_PLAN.md  ENCODER_IMPLEMENTATION_REPORT.md  ENCODER_LAYER_BFP16_MIGRATION_COMPLETE.md  FILE_LISTING.md  FINAL_COMPREHENSIVE_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY_UPDATED.md  FINAL_STABILITY_SUMMARY.md  FP16_QUICK_REFERENCE.md  FP16_WEIGHTS_REPORT.md  FREE_AIE_LICENSE_GUIDE.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  KERNEL_COMPILATION_REPORT.md  MASTER_CHECKLIST.md  MULTI_KERNEL_QUICK_REFERENCE.md  NATIVE_XRT_IMPLEMENTATION_REPORT.md  NATIVE_XRT_STATUS.md  PHASE1_BFP16_COMPLETE.md  PHASE2_ANALYSIS.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETE.md  PHASE2_CONVERSION_PLAN.md  PHASE2_DELIVERABLES.txt  PHASE2_SUMMARY.md  PHASE2_TEST_RESULTS.md  (+91 more)
xdna2/cpp/: BUILD_SYSTEM_REPORT.md  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  DELIVERY_REPORT.md  EXECUTIVE_SUMMARY.txt  FINAL_STATUS_REPORT.md  IMPLEMENTATION_REPORT.md  INTEGRATION_STATUS.md  NPU_INTEGRATION_SUCCESS.md  PHASE5_STATUS.md  PRODUCTION_VALIDATION_REPORT.md  QUICK_START_GUIDE.md  README.md  README_OLD.md  TEAM2_EXECUTIVE_REPORT.md  WEEK10_BUILD_REPORT.md  XRT_CPP_TEST_SUMMARY.md  XRT_INTEGRATION_ANALYSIS.md  XRT_INTEGRATION_COMPLETE.md  build.sh  clean.sh
xdna2/cpp/benchmarks/: bench_encoder.cpp
xdna2/cpp/cmake/: FindXRT.cmake
xdna2/cpp/include/: attention.hpp  bfp16_converter.hpp  bfp16_quantization.hpp  buffer_manager.hpp  encoder_c_api.h  encoder_layer.hpp  ffn.hpp  kernel_loader.hpp  npu_callback.h  quantization.hpp  whisper_xdna2_runtime.hpp  xrt_native.hpp  xrt_native_c_api.h
xdna2/cpp/include/xrt/detail/: version-slim.h
xdna2/cpp/src/: attention.cpp  bfp16_converter.cpp  bfp16_quantization.cpp  buffer_manager.cpp  encoder_c_api.cpp  encoder_layer.cpp  ffn.cpp  kernel_loader.cpp  main.cpp  quantization.cpp  whisper_xdna2_runtime.cpp  xrt_native.cpp  xrt_native_c_api.cpp
xdna2/cpp/tests/: CMakeLists.txt  XRT_INTEGRATION_TEST_REPORT.md  test_accuracy.cpp  test_bfp16_converter.cpp  test_bfp16_quantization.cpp  test_encoder.cpp  test_encoder_layer.cpp  test_encoder_layer_bfp16.cpp  test_quantization.cpp  test_runtime.cpp  test_xrt_integration.sh  test_xrt_npu_integration.cpp
(+1700 files in other folders)
